<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.shipquiz.MainActivity"
    android:background="@drawable/map_background">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">


           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/welcome_message"
               style="@style/WelcomeText_style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_1"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_1"
               style="@style/QuestionText_Style"
               />

           <ImageView
               android:src="@drawable/drakkar_ship_1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:ignore="ContentDescription"/>

           <EditText
               android:id="@+id/raw_text_one"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_question_1"
               android:inputType="textCapWords"
               style="@style/Options_Style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_2"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2"
               style="@style/QuestionText_Style"/>

           <CheckBox
               android:id="@+id/question_2_option_a"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2_option_a"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_2_option_b"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2_option_b"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_2_option_c"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2_option_c"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_2_option_d"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2_option_d"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_2_option_e"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2_option_e"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_2_option_f"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_2_option_f"
               style="@style/Options_Style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_3"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_3"
               style="@style/QuestionText_Style"/>

           <RadioGroup
               android:id="@+id/radioGroup3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <RadioButton
                   android:id="@+id/question_3_option_a"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_3_option_a"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_3_option_b"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_3_option_b"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_3_option_c"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_3_option_c"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
           </RadioGroup>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_4"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_4"
               style="@style/QuestionText_Style"/>

           <EditText
               android:id="@+id/raw_text_four"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_question_4"
               android:inputType="textCapWords"
               style="@style/Options_Style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_5"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5"
               style="@style/QuestionText_Style"/>

           <ImageView
               android:src="@drawable/ship_marks"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:ignore="ContentDescription"/>

           <CheckBox
               android:id="@+id/question_5_option_a"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5_option_a"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_5_option_b"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5_option_b"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_5_option_c"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5_option_c"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_5_option_d"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5_option_d"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_5_option_e"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5_option_e"
               style="@style/Options_Style"/>

           <CheckBox
               android:id="@+id/question_5_option_f"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_5_option_f"
               style="@style/Options_Style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_6"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_6"
               style="@style/QuestionText_Style"/>

           <EditText
               android:id="@+id/raw_text_six"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_question_6"
               android:inputType="textCapWords"
               style="@style/Options_Style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_7"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_7"
               style="@style/QuestionText_Style"/>

           <RadioGroup
               android:id="@+id/radioGroup7"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
               <RadioButton
                   android:id="@+id/question_7_option_a"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_7_option_a"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_7_option_b"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_7_option_b"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_7_option_c"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_7_option_c"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
           </RadioGroup>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_8"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_8"
               style="@style/QuestionText_Style"/>

           <RadioGroup
               android:id="@+id/radioGroup8"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
               <RadioButton
                   android:id="@+id/question_8_option_a"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_8_option_a"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_8_option_b"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_8_option_b"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_8_option_c"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_8_option_c"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
           </RadioGroup>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_9"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_9"
               style="@style/QuestionText_Style"/>

           <EditText
               android:id="@+id/raw_text_nine"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_question_9"
               android:inputType="textCapWords"
               style="@style/Options_Style"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/question_header_10"
               style="@style/QuestionHeader_Style"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/question_10"
               style="@style/QuestionText_Style"/>

           <RadioGroup
               android:id="@+id/radioGroup10"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
               <RadioButton
                   android:id="@+id/question_10_option_a"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_10_option_a"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_10_option_b"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_10_option_b"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
               <RadioButton
                   android:id="@+id/question_10_option_c"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/question_10_option_c"
                   android:textAppearance="?android:textAppearanceMedium"
                   style="@style/Options_Style"/>
           </RadioGroup>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/finish"
                   android:onClick="onSubmit"
                   style="?android:attr/buttonBarButtonStyle"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/colorForText"
                   android:layout_marginTop="32dp"/>

               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/clear"
                   android:onClick="onClear"
                   style="?android:attr/buttonBarButtonStyle"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/colorForText"
                   android:layout_marginTop="32dp"/>

           </LinearLayout>
       </LinearLayout>
</ScrollView>
